# custom-memory-allocator-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: allocator.h
src/: allocator.cpp
tests/: test_allocator.cpp
